// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 > *:not(:first-child) {
  margin-left: 0.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border: 1px solid #c9c9c9;
  border-radius: 4px;
  color: #333;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c3:hover {
  background-color: #efefef;
}

.c3:hover:active {
  background-color: #e3e3e3;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      style="size: default;"
      type="default"
    >
      <span>
        Test
      </span>
    </button>
    <button
      class="c3 c4"
      style="size: default;"
      type="default"
    >
      <span>
        Test 2
      </span>
    </button>
    <button
      class="c3 c4"
      style="size: default;"
      type="default"
    >
      <span>
        Test 3
      </span>
    </button>
  </div>
</div>
`;

exports[`renders correctly for grouped buttons 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c0 {
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

.c2 > *:not(:first-child) {
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0px;
  border-left-width: 0px;
}

.c2 > *:not(:last-child) {
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border: 1px solid #c9c9c9;
  border-radius: 4px;
  color: #333;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 500;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c3:hover {
  background-color: #efefef;
}

.c3:hover:active {
  background-color: #e3e3e3;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      style="size: default;"
      type="default"
    >
      <span>
        Test
      </span>
    </button>
    <button
      class="c3 c4"
      style="size: default;"
      type="default"
    >
      <span>
        Test 2
      </span>
    </button>
    <button
      class="c3 c4"
      style="size: default;"
      type="default"
    >
      <span>
        Test 3
      </span>
    </button>
  </div>
</div>
`;
